# DeepRL

./: .gitignore  A2C.py  README.md  REINFORCE.py  agent.py  benchmark_pymgrid.py  buffer.py  config.py  main.py  n_step_A2C.py  network.py  network_utils.py  normalize.py  old_network.py  pymgrid_clusters.py  pymgrid_config.py  pymgrid_experiment.py  pymgrid_macro.py  pymgrid_utils.py  pyproject.toml  recurrent_network.py  requirements.txt  run-tests.bash  setup.cfg  utils.py
.github/workflows/: python-app-dev.yml  python-app-pip.yml  python-app.yml
scripts/: create_requirements.bash  linting.bash  pre-commit.bash  run-tests.bash
src/DeepRL/: main.py
src/DeepRL/agents/: A2C.py  agent.py
src/DeepRL/network/: network.py
src/DeepRL/pymgrid_exp/: pymgrid_macro.py
src/DeepRLYB/: __main__.py  config.ini  ec2_init.sh  main.py
src/DeepRLYB/agents/: A2C.py  REINFORCE.py  agent.py
src/DeepRLYB/network/: network.py  utils.py
src/DeepRLYB/pymgrid_exp/: pymgrid_experiment.py  utils.py
src/DeepRLYB/utils/: buffer.py  config.py
src/deeprlyb/: __main__.py
src/deeprlyb/agents/: A2C.py  REINFORCE.py  agent.py
src/deeprlyb/network/: network.py  utils.py
src/deeprlyb/utils/: buffer.py  config.py  normalize.py
tests/: config.ini  test_A2C.py  test_buffer.py  test_network.py  test_normalize.py
