[tool.poetry]
name = "deeprl"
version = "0.1.0"
description = ""
authors = ["YANN BERTHELOT <yann.berthelot@capgemini.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.10.2"
numpy = "^1.22.2"
gym = "^0.21.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
