[tool.poetry]
name = "deeprlyb"
version = "0.2.2"
description = ""
authors = ["YANN BERTHELOT <yann.berthelot@capgemini.com>"]
packages = [
    { include = "deeprlyb" }
]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
torch = "1.10.2"
numpy = "1.22.2"
gym = "0.21.0"
tqdm = "4.62.3"
tensorboard = "2.8.0"
pyglet = "1.5.21"
pandas = "1.4.1"
matplotlib = "3.5.1"
Box2D = "2.3.10"
pep517 = "0.12.0"
wandb = "0.12.10"
scikit-learn = "^1.0.2"
setuptools = "59.5.0"

[tool.poetry.dev-dependencies]



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "pypi_"
url = "https://test.pypi.org/simple/"
